feat: mapper y openapi 1.1.0